--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <link rel="stylesheet" href="style.css" class="css">
@@ -13,10 +17,15 @@
 </head>
 <body>
 
- 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Josh Santos</a>.
+  </div>
+
+  <div class="container">
+    <img src="images/image-qr-code.png" alt="" id="qr--code">
+    <h1 class="header--1"> Improve your front-end skills by building projects </h1>
+    <p class="paragraph--1">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
 </body>
 </html>
